[gd_scene load_steps=21 format=3 uid="uid://bt3bj86ej15ct"]

[ext_resource type="Texture2D" uid="uid://cictsrdu383gw" path="res://Assets/Timer/Bomb_boom_sheet.png" id="1_2y2lb"]
[ext_resource type="Script" uid="uid://tn8b6fn2byah" path="res://Game/GameTimer/bomb_timer.gd" id="1_eb28k"]
[ext_resource type="Script" uid="uid://d0mmq2inlb2s1" path="res://Scripts/TextureSpritesFrames/texture_sprite_frames.gd" id="2_eb28k"]
[ext_resource type="Texture2D" uid="uid://d4d1g012cggam" path="res://Assets/Timer/Bomb.png" id="2_nkf1j"]
[ext_resource type="Texture2D" uid="uid://juwvslqdy5ne" path="res://Assets/Timer/Timer_fuse.png" id="3_nkf1j"]
[ext_resource type="Texture2D" uid="uid://1m6ig53m0muf" path="res://Assets/Timer/Timer_fuse_burnt.png" id="5_nkf1j"]
[ext_resource type="Texture2D" uid="uid://be0ckh312gvp0" path="res://Assets/Timer/spark.png" id="7_wjhja"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5jo8o"]
atlas = ExtResource("1_2y2lb")
region = Rect2(0, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkf1j"]
atlas = ExtResource("2_nkf1j")
region = Rect2(0, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_3616n"]
atlas = ExtResource("1_2y2lb")
region = Rect2(160, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8488"]
atlas = ExtResource("1_2y2lb")
region = Rect2(320, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgjdx"]
atlas = ExtResource("1_2y2lb")
region = Rect2(480, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_elhy6"]
atlas = ExtResource("1_2y2lb")
region = Rect2(640, 0, 160, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_nmh2o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkf1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jo8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3616n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8488")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgjdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elhy6")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wjhja"]
atlas = ExtResource("5_nkf1j")
region = Rect2(124, 0, 461, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfg3"]
atlas = ExtResource("3_nkf1j")
region = Rect2(148.408, 0, 457.736, 160)
filter_clip = true

[sub_resource type="Curve2D" id="Curve2D_p60ow"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 21, 39, 0, 0, 0, 0, 38, 28, 0, 0, 0, 0, 57, 23, 0, 0, 0, 0, 72, 23, 0, 0, 0, 0, 83, 28, 0, 0, 0, 0, 98, 35, 0, 0, 0, 0, 106, 46, 0, 0, 0, 0, 110, 59, 0, 0, 0, 0, 114, 72, 0, 0, 0, 0, 118, 83, 0, 0, 0, 0, 124, 102, 0, 0, 0, 0, 129, 108, 0, 0, 0, 0, 134, 113, 0, 0, 0, 0, 138, 117, 0, 0, 0, 0, 143, 120, 0, 0, 0, 0, 148, 122, 0, 0, 0, 0, 152, 122, 0, 0, 0, 0, 155, 123, 0, 0, 0, 0, 164, 122, 0, 0, 0, 0, 172, 121, 0, 0, 0, 0, 178, 117, 0, 0, 0, 0, 183, 111, 0, 0, 0, 0, 188, 106, 0, 0, 0, 0, 192, 100, 0, 0, 0, 0, 194, 95, 0, 0, 0, 0, 197, 86, 0, 0, 0, 0, 200, 79, 0, 0, 0, 0, 202, 70, 0, 0, 0, 0, 204, 63, 0, 0, 0, 0, 206, 54, 0, 0, 0, 0, 208, 49, 0, 0, 0, 0, 210, 44, 0, 0, 0, 0, 215, 38, 0, 0, 0, 0, 221, 33, 0, 0, 0, 0, 231, 28, 0, 0, 0, 0, 240, 24, 0, 0, 0, 0, 246, 22, 0, 0, 0, 0, 250, 22, 0, 0, 0, 0, 256, 22, 0, 0, 0, 0, 264, 22, 0, 0, 0, 0, 270, 23, 0, 0, 0, 0, 282, 28, 0, 0, 0, 0, 287, 33, 0, 0, 0, 0, 297, 37, 0, 0, 0, 0, 301, 44, 0, 0, 0, 0, 306, 53, 0, 0, 0, 0, 309, 62, 0, 0, 0, 0, 312, 74, 0, 0, 0, 0, 315, 81, 0, 0, 0, 0, 318, 90, 0, 0, 0, 0, 320, 98, 0, 0, 0, 0, 324, 105, 0, 0, 0, 0, 327, 109, 0, 0, 0, 0, 333, 114, 0, 0, 0, 0, 341, 120, 0, 0, 0, 0, 352, 123, 0, 0, 0, 0, 361, 124, 0, 0, 0, 0, 370, 122, 0, 0, 0, 0, 375, 120, 0, 0, 0, 0, 379, 114, 0, 0, 0, 0, 386, 106, 0, 0, 0, 0, 392, 96, 0, 0, 0, 0, 397, 89, 0, 0, 0, 0, 400, 78, 0, 0, 0, 0, 404, 63, 0, 0, 0, 0, 408, 54, 0, 0, 0, 0, 412, 43, 0, 0, 0, 0, 416, 37, 0, 0, 0, 0, 425, 31, 0, 0, 0, 0, 438, 25, 0, 0, 0, 0, 449, 22, 0, 0, 0, 0, 458, 22, 0, 0, 0, 0, 464, 22, 0, 0, 0, 0, 469, 22)
}
point_count = 74

[sub_resource type="Animation" id="Animation_nkf1j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BombAnimated:current_animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"explosion"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BombAnimated:frame_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BombAnimated:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_eb28k"]
resource_name = "explode"
length = 0.16667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BombAnimated:current_animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"explosion"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BombAnimated:frame_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0344801, 0.0666667, 0.1, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BombAnimated:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"emit_timed_out"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nkf1j"]
_data = {
&"RESET": SubResource("Animation_nkf1j"),
&"explode": SubResource("Animation_eb28k")
}

[node name="BombTimer" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_eb28k")
timer_wait_time = 5.0

[node name="BombAnimated" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("AtlasTexture_5jo8o")
script = ExtResource("2_eb28k")
sprite_frames = SubResource("SpriteFrames_nmh2o")
current_animation = &"explosion"
frame_index = 1
metadata/_custom_type_script = "uid://d0mmq2inlb2s1"

[node name="FuseTimer" type="TextureProgressBar" parent="BombAnimated"]
unique_name_in_owner = true
z_index = -1
layout_mode = 0
offset_left = 118.0
offset_top = 5.0
offset_right = 579.0
offset_bottom = 165.0
max_value = 1.0
step = 0.001
value = 0.645
texture_under = SubResource("AtlasTexture_wjhja")
texture_progress = SubResource("AtlasTexture_ajfg3")

[node name="Path2D" type="Path2D" parent="BombAnimated/FuseTimer"]
position = Vector2(-14, 0)
curve = SubResource("Curve2D_p60ow")

[node name="SparkFusePath" type="PathFollow2D" parent="BombAnimated/FuseTimer/Path2D"]
unique_name_in_owner = true
position = Vector2(469, 22)
progress = 696.663
loop = false

[node name="Spark" type="TextureRect" parent="BombAnimated/FuseTimer/Path2D/SparkFusePath"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -22.0
offset_right = 22.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_wjhja")
expand_mode = 1

[node name="GameTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nkf1j")
}
speed_scale = 0.75

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
